# OBS-Dynamic-Output-Folders

./: CMakeLists.txt  dev-template.py  obs-dynamic-recording-path-plugin.cpp
